@@ -49,12 +49,6 @@
    <artifactId>selenium-java</artifactId>
    <version>4.27.0</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-manager -->
-<dependency>
-   <groupId>org.seleniumhq.selenium</groupId>
-   <artifactId>selenium-manager</artifactId>
-   <version>4.27.0</version>
-</dependency>
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
    <groupId>com.aventstack</groupId>
@@ -68,11 +62,12 @@
    <version>2.16.1</version>
 </dependency>
 <dependency>
- <groupId>org.projectlombok</groupId>
- <artifactId>lombok</artifactId>
- <version>1.18.30</version>
- <scope>provided</scope>
+  <groupId>org.projectlombok</groupId>
+  <artifactId>lombok</artifactId>
+  <version>1.18.32</version>
+  <scope>provided</scope>
 </dependency>
+
 </dependencies>
 
 
@@ -136,6 +131,33 @@
         <mainClass>tests.TestSuiteRunner</mainClass>
     </configuration>
 </plugin>
+
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.13.0</version>
+  <configuration>
+    <fork>true</fork>
+    <source>17</source>
+    <target>17</target>
+    <compilerArgs>
+      <arg>--add-exports</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+      <arg>--add-opens</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+      <arg>--add-opens</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+    </compilerArgs>
+    <annotationProcessorPaths>
+      <path>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.32</version>
+      </path>
+    </annotationProcessorPaths>
+  </configuration>
+</plugin>
+
 </plugins>
 </build>
 
